tests/pass/ArithRightShift.java
package pass;

public class ArithRightShift {
    public int arithRightShift(int x, int y) {
        return x >> y;
    }
}
