tests/fail/ThrowNonException.java
package fail;

public class ThrowNonException {
	
	public static void main() throws String {
		throw new String();
	}
}
